[gd_scene load_steps=7 format=3 uid="uid://bqs3r54fx7vmx"]

[ext_resource type="Script" path="res://scenes/game_manager.gd" id="1_0heso"]
[ext_resource type="PackedScene" uid="uid://ddlfij2ghida2" path="res://scenes/plating_screen.tscn" id="2_l8i3v"]
[ext_resource type="PackedScene" uid="uid://1gxfsts8uruw" path="res://scenes/ui/pause_screen.tscn" id="3_c2fa0"]
[ext_resource type="Script" path="res://scenes/OrderCreator.gd" id="4_xpy5x"]
[ext_resource type="Script" path="res://scenes/DishSpawner.gd" id="5_446jf"]
[ext_resource type="Script" path="res://scenes/OrderChecker.gd" id="6_q75j3"]

[node name="GameManager" type="Node"]
process_mode = 3
script = ExtResource("1_0heso")

[node name="PlatingScreen" parent="." node_paths=PackedStringArray("game_manager") instance=ExtResource("2_l8i3v")]
game_manager = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseScreen" parent="CanvasLayer" node_paths=PackedStringArray("game_manager") instance=ExtResource("3_c2fa0")]
process_mode = 3
visible = false
game_manager = NodePath("../..")

[node name="OrderCreator" type="Node" parent="."]
script = ExtResource("4_xpy5x")

[node name="DishSpawner" type="Node2D" parent="."]
position = Vector2(-194, 535)
script = ExtResource("5_446jf")

[node name="OrderChecker" type="Node" parent="."]
script = ExtResource("6_q75j3")

[connection signal="order_created" from="OrderCreator" to="DishSpawner" method="_on_order_created"]
[connection signal="dish_spawned" from="DishSpawner" to="OrderChecker" method="_on_dish_spawned"]
